*Empty MediaWiki Message*

--- a/Isinbajeva_Jelena.mw
+++ b/Isinbajeva_Jelena.mw
@@ -5,6 +5,7 @@ Jelena seižuti 28 mail'man rekordad hüppindas anšpuganke naižiden keskes.
 
 == Irdkosketused ==
 * [http://yelena-isinbaeva.com/ Jelenan Isinbajevan oficialine sait]
+* [http://twitter.com/yelenaisinbaeva Jelena Isinbajeva Tvitteras]
 
 {{stub}}
 
