*Empty MediaWiki Message*

--- a/Näl'g_(roman).mw
+++ b/Näl'g_(roman).mw
@@ -1,5 +1,5 @@
 [[Fail:Hunger first edition.jpg|pisi|200px|Ezmäižen pästandan kor']]
-'''Näl'g''' ([[Norvegijan kel'|norv.]] ''Sult'') om [[Hamsun Knut|Knutan Hamsunan]] ezmäine roman, kudamban täuz' pästand om päzdud vl 1890. Nece roman, kudambas om äi avtobiografižid pirdoid, toi Hamsunale mail'man hoštusen.
+'''«Näl'g»''' ([[Norvegijan kel'|norv.]] ''Sult'') om [[Hamsun Knut|Knutan Hamsunan]] ezmäine roman, kudamban täuz' pästand om päzdud vl 1890. Nece roman, kudambas om äi avtobiografižid pirdoid, toi Hamsunale mail'man hoštusen.
 
 == Irdkosketused ==
 * [http://www.polyglotproject.com/books/Norwegian/sult Romanan tekst norvegijan kelel]
