--- a/Ogeruz_i_aznoičend.mw
+++ b/Ogeruz_i_aznoičend.mw
@@ -1,5 +1,5 @@
 [[Fail:Crime and Punishment-1.png|thumb|220px|Romanan toine pästand]]
-'''Ogeruz da aznoičend''' ([[venäkel'|ven.]] ''Преступление и наказание'' / ''Prestuplenije i nakazanije''/) om [[Dostojevskii Födor|Födoran Dostojevskijan]] roman.
+'''«Ogeruz da aznoičend»''' ([[venäkel'|ven.]] ''Преступление и наказание'' / ''Prestuplenije i nakazanije''/) om [[Dostojevskii Födor|Födoran Dostojevskijan]] roman.
 {{stub}}
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
