*Empty MediaWiki Message*

--- a/Kalarand.mw
+++ b/Kalarand.mw
@@ -1,5 +1,5 @@
 [[Image:Vepsakalarand.jpg|right|thumb|Pästandan kirjankor']]
-'''Kalarand''' om ezmäine [[Vepsän kel'|vepsänkeline]] roman. Sen tegii om [[Brodskii Igor'|Igor' Brodskii]].
+'''«Kalarand»''' om ezmäine [[Vepsän kel'|vepsänkeline]] roman. Sen tegii om [[Brodskii Igor'|Igor' Brodskii]].
 
 Kirj om lähttud [[2002]]-del vodel [[Petroskoi]]š.
 
