*Empty MediaWiki Message*

--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -9,5 +9,6 @@ Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>Ozatelem J
 {{stub}}
 
 [[Kategorii:Rahvahankul'tur]]
+[[Kategorii:Venäman muzikgruppad]]
 [[Kategorii:Vepsän muzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
