--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -2,7 +2,7 @@
 
 Se pajati dai pajatab erazvuiččiš [[Venäma|Venäman]] festivališ dai Moskvas-ki <ref>Al'ona Jegorova. Vepsän rahvahan hor Moskvas // Kodima. – 2009. – 07 (heinku).</ref>. Vepsän hor om tutab verhiš maiš-ki: Suomes, Norvegijas, Ročin da Estin mal i toižiš maiš.
 
-Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>[Ozatelem Jubilejanke! // Kodima. – 2012. – 05 (semendku) http://veps-kir.ucoz.ru/publ/vepsan/kodima/ozatehlehm_jubilejanke/3-1-0-69] (Nece kirjutuz nügüd'läižel vepsän kirillical).</ref> (vodelpäi 1978), Venäman da Karjalan arvostadud radnik.
+Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>[http://veps-kir.ucoz.ru/publ/vepsan/kodima/ozatehlehm_jubilejanke/3-1-0-69 Ozatelem Jubilejanke! // Kodima. – 2012. – 05 (semendku) (Nece kirjutuz nügüd'läižel vepsän kirillical)].</ref> (vodelpäi 1978), Venäman da Karjalan arvostadud radnik.
 
 == Homaitused ==
 {{Reflist}}
