*Empty MediaWiki Message*

--- a/Grekan_kirjamišt.mw
+++ b/Grekan_kirjamišt.mw
@@ -19,7 +19,7 @@
 | style="width:3em; text-align:center; padding: 3px;" | [[Nü|Ν ν]]
 | style="width:3em; text-align:center; padding: 3px;" | [[Ksi|Ξ ξ]]
 | style="width:3em; text-align:center; padding: 3px;" | [[Omikron|Ο ο]]
-| style="width:3em; text-align:center; padding: 3px;" | [[Pi|Π π]]
+| style="width:3em; text-align:center; padding: 3px;" | [[Pi (kirjam)|Π π]]
 |-
 | style="width:3em; text-align:center; padding: 3px;" | [[Ro|Ρ ρ]]
 | style="width:3em; text-align:center; padding: 3px;" | [[Sigma|Σ σ ς]]
