--- a/Duty_free.mw
+++ b/Duty_free.mw
@@ -1,5 +1,5 @@
 [[Fail:Sheremetyevo2 departure 1.jpg|thumb|right|250px|„Duty free“-lauk [[Šeremet'jevo]]-aeroportas ([[Moskv]], [[Venäma]])]]
-'''„Duty free“''' oma eriline [[lauk]]an tip. Sen tavarad oma lujas madal maksarv ''[из-за отсутствия на них налоговых пошлин и акцизов]''.
+'''„Duty free“''' om eriline [[lauk]]an tip. Sen tavarad oma lujas madal maksarv ''[из-за отсутствия на них налоговых пошлин и акцизов]''.
 
 Tobjimalaz „duty free“-laukad [[port]]oiden, [[aeroport]]oiden, [[päraudtestancii|päraudtestancijoiden]] da [[valdkundröun]]oiden südäimes. Tipine assortiment — [[alkogoližed jomad]], [[tabak]]tegesed, [[parfümerii]] da [[bakalei|bakalejantavarad]].
 {{stub}}
