--- a/Mille_Džon_Everett.mw
+++ b/Mille_Džon_Everett.mw
@@ -1,4 +1,4 @@
-[[Fail:John everett millais.jpg|thumb|right|250px|Džon Mille]]
+[[Fail:John everett millais.jpg|thumb|right|250px|Džon E. Mille]]
 '''Džon Everett Mille''' ([[anglijan kel'|angl.]]: ''John Everett Millais''; sünd. [[8. kezaku]] [[1829]], [[Sautgempton]], [[Sur' Britanii]] — kol. [[13. eloku]] [[1896]], [[London]]) oli tetab britanijalaine pirdai da illüstrator.
 {{stub}}
 
