*Empty MediaWiki Message*

--- a/Hydnellum_peckii.mw
+++ b/Hydnellum_peckii.mw
@@ -1,5 +1,5 @@
 [[Fail:Hydnellum peckii.darvin.jpg|thumb|right|250px|''Hydnellum peckii'']]
-'''''Hydnellum peckii''''' om koiran[[sened|sen']].
+'''''Hydnellum peckii''''' om [[Sened i babukad|koiransen']].
 
 Eraz pen'. Kazvab vaiše [[sügüz'|sügüzel]], [[kavag'mec|kavag'mecoiš]]. Lujas karged.
 {{stub}}
