--- a/Mycena_chlorophos.mw
+++ b/Mycena_chlorophos.mw
@@ -1,7 +1,7 @@
 [[Fail:Mycena chlorophos.jpg|thumb|right|250px|''Mycena chlorophos'']]
 '''''Mycena chlorophos''''' om pen' [[Sened i babukad|sen']]. Kazvab [[Azii|Azijas]], [[Avstralii (kontinent)|Avstralijas]] da [[Suviamerik]]as.
 
-Söbadaine om tundmatoi.
+Söbaine om tundmatoi.
 {{stub}}
 
 [[Kategorii:Sened kirjamišton mödhe]]
