*Empty MediaWiki Message*

--- a/Moskv.mw
+++ b/Moskv.mw
@@ -6,7 +6,7 @@
 | align="center" | [[Fail:Coat_of_Arms_of_Moscow.svg|100px|Moskvan lidnanznam]]
 | align="center" | [[Fail:Flag_of_Moscow.svg|125px|Moskvan flag]]
 |-
-|Eläjiden lugu|| 10 470 318 <small>(01.01.2008)</small>
+|Eläjiden lugu|| 11 514 330<ref>http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls</ref> <small>(2010)</small>
 |-
 |Pind|| 1081 km²
 |}
@@ -36,6 +36,8 @@ Fail:MIBC 27th April 2012.jpg|[[Moskv-siti]]
 * [http://moskow.ru/ Moskvan rahvahidenkeskeine sait] ([[Anglijan kel'|anglijan kelel]], [[Ispanijan kel'|ispanijan kelel]], [[Francijan kel'|francijan kelel]], [[Saksan kel'|saksan kelel]], [[Kitajan kel'|kitajan kelel]] da [[Venäkel'|venäkelel]])
 * [http://moskva.kotoroy.net/ Moskv, kudambad ei ole jo. Istoriž-kul'turine projekt] (venäkelel)
 * [http://www.newsmsk.com/ Moskvan uzištused] (venäkelel)
+
+== Homaičendad == <references />
 
 {{Nece kirjutuz Vepsän Vikijas|[http://veps-kir.wikia.com/wiki/Москв Москв]}}
 {{Šablon:Venälaižen Federacijan subjektad}}
