*Empty MediaWiki Message*

--- a/Vepsän_rahvahaline_volost'.mw
+++ b/Vepsän_rahvahaline_volost'.mw
@@ -15,7 +15,7 @@
 }}
 '''Vepsän rahvahaline volost'''' ([[Venäkel'|venäkelel]]: ''Вепсская национальная волость'') oli vepsläižiden administrativine avtonomii vodelpäi 1994 vodhesai 2005 [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], [[Venäma|Venämas]]. Sen sijaduz oli Karjalan Tazovaldkundan suvipolel da [[Änine|Änižjärven]] päivlaskmaižel randal. Vodelpäi 2006 siš oliba [[Änižröunan rajon|Änižröunan rajonan]] [[Šokš|Šokš]]an, [[Šoutjärv’|Šoutarv]]en da [[Kaleig|Kaleig]]en (Kalajogen) vepsän küläkundad. Keskuz oli [[Šoutjärv’|Šoutarves]]. Pind — 830 km². Vodel 2002 eläjiden lugu oli 3 493 mest. Volostin küliden enambišton sijaduz oli [[Änine|Änižjärven]] randal da pidust’ R19-ted ([[Petroskoi|Petroskoi]] — [[Šoutjärv’|Šoutarv]] — [[Šušt|Šušt]]).
 
-Enččen volostin territorijal oma kvarcitan, gabrodiabazan löudmižsijad da savisijad. Se volost' oli kaikiš mecakahamb municipaline palakund Karjalas. Volostin jur'ristitišt om [[Vepsläižed|vepsän rahvaz]]. Vepsläižid  oli enamba 30% Volostin eläjid. Ristitišton päazjin oliba manalaižiden kal'huziden samine, mecradod, punümbriradmine, kalatez da maižanduz. Volostiš oliba 3 keskškolad, lapsiden päivkodid, lapsiden muzikškol da üks' sen filial, kirjištod, 3 kul’turkodid da klub. Vodelpäi 1936 tähäsai radab Vepsän rahvahaline hor, vodelpäi 1982 radab Vepsän lapsiden hor.
+Enččen volostin territorijal oma kvarcitan, gabrodiabazan löudmižsijad da savisijad. Se volost' oli kaikiš mecakahamb municipaline palakund Karjalas. Volostin jur'ristitišt om [[Vepsläižed|vepsän rahvaz]]. Vepsläižid  oli enamba 30% Volostin eläjid. Ristitišton päazjin oliba manalaižiden kal'huziden samine, mecradod, punümbriradmine, kalatez da maižanduz. Volostiš oliba 3 keskškolad, lapsiden päivkodid, lapsiden muzikškol da üks' sen filial, kirjištod, 3 kul’turkodid da klub. Vodelpäi 1936 tähäsai radab [[Vepsän rahvahaline hor]], vodelpäi 1982 radab Vepsän lapsiden hor.
 
 Vepsläižiden rahvahaližed verod kaičeb [[Vepsän kul’turan muzei|Šoutarven vepsläine etnografine muzei]]. Volostiš om 111 arhitekturan, arheologijan, istorijan muštpacast (68 pušt arhitekturmuštpacast: küläkodid, läväd da aitoid). Mugažo Volostiš om D’äšarvan jumalankodi (läz 1580 v.), Brusnenskij jumalankodi, pühän Foman-apostolan jumalanpert' (XX voz'sada), puine jumalanpert' [[Vehkoi|Vehkoiš]] (XIX voz'sadan lop), jumalanpert' Mägiküläs (XIX voz'sadan kesk).
 
