*Empty MediaWiki Message*

--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -6,6 +6,9 @@ Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>[http://ve
 
 == Homaitused ==
 {{Reflist}}
+
+== Irdkosketused ==
+* [http://www.etnocenter.ru/kollekt/tvorcheskie-kollektivy-centra/vepsskij-narodnyj-hor/ Vepsän rahvahaline hor] [www.etnocenter.ru Karjalan Tazovaldkundan Rahvahan kul’turkeskusen]-saitas (ven.)
 {{stub}}
 
 [[Kategorii:Rahvahankul'tur]]
