--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -8,10 +8,10 @@ Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>[http://ve
 {{Reflist}}
 
 == Irdkosketused ==
-* [http://www.etnocenter.ru/kollekt/tvorcheskie-kollektivy-centra/vepsskij-narodnyj-hor/ Vepsän rahvahan hor] [http://www.etnocenter.ru Karjalan Tazovaldkundan Rahvahiden kul’turkeskusen]-saitas (ven.)
+* [http://www.etnocenter.ru/kollekt/tvorcheskie-kollektivy-centra/vepsskij-narodnyj-hor/ Vepsän rahvahan hor] [http://www.etnocenter.ru Karjalan Rahvahaližen kul’turkeskusen]-saitas (ven.)
 {{stub}}
 
 [[Kategorii:Rahvahankul'tur]]
-[[Kategorii:Venäman muzikgruppad]]
 [[Kategorii:Vepsän muzikgruppad]]
+[[Kategorii:Venäman muzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
