*Empty MediaWiki Message*

--- a/Randaine.mw
+++ b/Randaine.mw
@@ -1,4 +1,4 @@
-'''''Randaine''''' ([[Venäkel'|ven.]]: ''«Бережок»'') om üks' Karjalan Tazovaldkundan pajokollektivoišpäi, kudamb om sündunu Petroskoiš vodel 2003 [[Vepsän  kul'turan sebr|Vepsän  kul'turan sebran]] tomotusen  tagut.
+'''Randaine''' ([[Venäkel'|ven.]]: ''«Бережок»'') om üks' Karjalan Tazovaldkundan pajokollektivoišpäi, kudamb om sündunu Petroskoiš vodel 2003 [[Vepsän  kul'turan sebr|Vepsän  kul'turan sebran]] tomotusen  tagut.
 
 ''Pajosebran ohjandai'' – Baranova Irina Vladimirovna.
 
