*Empty MediaWiki Message*

--- a/Randaine.mw
+++ b/Randaine.mw
@@ -1,4 +1,4 @@
-'''«Randaine»''' ([[Venäkel'|ven.]]: ''«Бережок»'') om üks' Karjalan Tazovaldkundan pajokollektivoišpäi, kudamb om sündunu Petroskoiš vodel 2003 [[Vepsän  kul'turan sebr|Vepsän  kul'turan sebran]] tomotusen  tagut.
+'''«Randaine»''' ([[Venäkel'|ven.]]: ''«Бережок»'') om üks' Karjalan Tazovaldkundan pajokollektivoišpäi, kudamb om sündnu [[Petroskoi]]he vodel [[2003]] [[Vepsän  kul'turan sebr|Vepsän  kul'turan sebran]] tomotusen  tagut.
 
 ''Pajosebran ohjandai'' – Baranova Irina Vladimirovna.
 
@@ -6,13 +6,13 @@
 
 ''Mülükund'' - 12 ühtnikod.
 
-Vl. 2006-lpäi pajosebr käroudase vepsän muzikkul'turan veronmugaižile žanroile. Ansambl' radab voikuiden, sai-, kätte- da lühüdpajoiden, mugažo sanaližiden žanroiden udessündutamižes. Pajoiden pajatand čereduiše vepslaižiden veronmugaižiden karguiden, vändoiden, haravodoiden edestamižen ühtes.
+Vl. [[2006]]-lpäi pajosebr käraudase vepsän muzikkul'turan veronmugaižile žanroile. Ansambl' radab voikuiden, sai-, kätte- da lühüdpajoiden, mugažo sanaližiden žanroiden udessündutamižes. Pajoiden pajatand čereduiše vepslaižiden veronmugaižiden karguiden, vändoiden, haravodoiden edestamižen ühtes.
 
-Kaik pajosebran pajanikad oma kuspäi-se tulnuded: toižed oma Vologdan, toižed – Piterin da Änižröunan agjoišpäi.<ref>Larisa Smolina. Em voigoi pajota eläda // Kodima. – 2008. – 02 (uhoku).</ref>
+Kaik pajosebran pajanikad oma kuspäi-se tulnuded: toižed oma [[Vologd]]an, toižed – [[Piter]]in da [[Änižröunan rajon|Änižröunan]] agjoišpäi.<ref>Larisa Smolina. Em voigoi pajota eläda // Kodima. – 2008. – 02 (uhoku).</ref>
 
 Erazvuiččiden voziden ohjandajad: vepsläižiden pajanikoidenke zavodi rata Lidija Olešova. Hän radoi «Randaižes» kaks' vot, a sid' oli Juri Mugačev. Hänen jäl'ghe radoi äjak-se Zoja Jefimova. Jatksi necidä azjad Irina Baranova. Vl. 2010 pajosebran ohjandai om Gagarina Jelena, hän lopi Piterin kul'turakademijan.<ref>Galina Baburova. «Randaine»-ansambl'al zavodihe uz' elo // Kodima. – 2010. – 03 (keväz'ku).</ref> <ref>Oksana Kuznecova. Randaine vastsi Raštvad! // Kodima. – 2011. – 01 (viluku).</ref>
 
-Ristituid, ked konz-se käveliba «Randaižehe»: Vera Mednikova, Valentina Vorobjova, Alevtina Vavilina, Juri Mugačev, [[Nina Zaiceva]], Lidija Olešova, Tamara Ščerbakova.
+Ristitud, ked konz-se käveliba «Randaižehe»: Vera Mednikova, Valentina Vorobjova, Alevtina Vavilina, Juri Mugačev, [[Nina Zaiceva]], Lidija Olešova, Tamara Ščerbakova.
 
 Pajatab erazvuiččiš Karjalan festivališ <ref>Татьяна Маркова. Путешествие в Северный край // Kodima. – 2011. – 08 (eloku).</ref>, mugažo Venäman rahvahankeskeižiš praznikoiš <ref>Людмила Солдатова. На север, к саамам // Kodima. – 2012. – 04 (sulaku).</ref>
 
