*Empty MediaWiki Message*

--- a/Starobžegokai.mw
+++ b/Starobžegokai.mw
@@ -1,4 +1,4 @@
-[[Fail:Река Кубань и аул Старобжегокай. Вид из микрорайона Юбилейный города Краснодар.jpg|thumb|right|300px|Nägu aulha [[Krasnodar]]an «[[Jubilejnii (Krasnodaran mikrorajon)|Jubilejnii]]»-mikrorajonaspäi]]
+[[Fail:Река Кубань и аул Старобжегокай. Вид из микрорайона Юбилейный города Краснодар.jpg|thumb|right|300px|Nägu aulha [[Krasnodar]]an «[[Jubilejnii (Krasnodaran mikrorajon)|Jubileinii]]»-mikrorajonaspäi]]
 '''Starobžegokai''' ([[Venäkel'|ven.]] ''Старобжегокай'', [[Adigan kel'|adig.]] ''Бжыхьэкъоежъ'') om [[aul]] [[Adigei|Adigejan]] [[Tahtamukajan rajon]]as.
 
 Eläjiden lugu om 1993 ristitud (2010).
