*Empty MediaWiki Message*

--- a/Jubileinii_(Krasnodaran_mikrorajon).mw
+++ b/Jubileinii_(Krasnodaran_mikrorajon).mw
@@ -1,5 +1,5 @@
-[[Fail:Umr.jpg|thumb|right|300px|Jubeleinii-mikrorajon ülähänpäi]]
-'''Jubeleinii''' ([[Venäkel'|ven.]] ''Юбилейный'') om [[Krasnodar]]an mikrorajon.
+[[Fail:Umr.jpg|thumb|right|300px|Jubileinii-mikrorajon ülähänpäi]]
+'''Jubileinii''' ([[Venäkel'|ven.]] ''Юбилейный'') om [[Krasnodar]]an mikrorajon.
 
 Sijadase [[Krasnodaran kesklidnalaine Päivlaskmaine ümbrik|Päivlaskmaižes]] ümbrikos, [[Kuban' (jogi)|Kuban'-jogel]] tehtud pol'sarel. Jogen vastal'žel randal om aul [[Starobžegokai]].
 
