--- a/Okkervil'_(jogi).mw
+++ b/Okkervil'_(jogi).mw
@@ -1,5 +1,5 @@
 [[Fail:Okkervil.jpg|thumb|right|275px|Nägu Okkervil'he [[Jablonovskii sild (Piter)|Jablonovskii sildan]] polehepäi]]
-'''Okkervil'''' ([[Venäkel'|ven.]] ''Оккервиль'') om jogi [[Piter]]in päivnouzmas, [[Oht (jogi)|Ohtan]] hura ližajogi.
+'''Okkervil'''' ([[Venäkel'|ven.]] ''Оккервиль'') om jogi [[Piter]]in päivnouzmas, [[Oht (Nevan ližajogi)|Ohtan]] hura ližajogi.
 
 Piduz — 18 km, leveduz — 1,5—25 m, süvüz — 0,25—0,8 m.
 
