--- a/Paavoharju.mw
+++ b/Paavoharju.mw
@@ -29,4 +29,7 @@ Mülükund oma ''Lauri Ainala'', ''Olli Ainala'', ''Toni Kähkönen'' da ''Jenni
 [[Kategorii:Suomenman muzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 
+[[en:Paavoharju]]
 [[fi:Paavoharju]]
+[[pt:Paavoharju]]
+[[ru:Paavoharju]]
