*Empty MediaWiki Message*

--- a/Moskv.mw
+++ b/Moskv.mw
@@ -31,14 +31,14 @@ Fail:MIBC 27th April 2012.jpg|[[Moskv-siti]]
 
 [[Fail:Moscow pano.jpg|center|850px|pisi|Moskvanjogen Nägu]]
 
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
 * [http://www.mos.ru/ Moskvan ohjastusen sait] (venäkelel)
 * [http://moskow.ru/ Moskvan rahvahidenkeskeine sait] ([[Anglijan kel'|anglijan kelel]], [[Ispanijan kel'|ispanijan kelel]], [[Francijan kel'|francijan kelel]], [[Saksan kel'|saksan kelel]], [[Kitajan kel'|kitajan kelel]] da [[Venäkel'|venäkelel]])
 * [http://moskva.kotoroy.net/ Moskv, kudambad ei ole jo. Istoriž-kul'turine projekt] (venäkelel)
 * [http://www.newsmsk.com/ Moskvan uzištused] (venäkelel)
-
-== Homaičendad == <references />
-
 {{Nece kirjutuz Vepsän Vikijas|[http://veps-kir.wikia.com/wiki/Москв Москв]}}
 {{Šablon:Venälaižen Federacijan subjektad}}
 
