*Empty MediaWiki Message*

--- a/Moskv.mw
+++ b/Moskv.mw
@@ -16,7 +16,7 @@ Dolgorukii Jurii pani Moskvan lidnan alusen vodel 1147. Jäl'ghepäi lidn oli Su
 
 Sen sijaduz om Päivnouzmevropan alangišton keskuses, [[Okanjogi|Okanjogen]] ga [[Volg]]an jogiden keskes, [[Moskvanjogi|Moskvanjogen]] randal.
 
-Moskv om Venäman znamasine turistine keskuz. [[Moskovan kreml']] da [[Rusked torg]], toižed kul'turan da arhitekturan muštpacahad mülüba [[UNESCO]]:n Man jäl'gusen nimikirjuteshe. Se om mugažo jalos znamasine transportsol'm. Moskvas om 6 aeroportad, 9 päraudtestancijad, 3 jogiportad. Sapsan-üläpiguzjonused kävudas [[Piter]]in, Moskv da [[Alauz'lidn]]an (Alanovgorodan) keskes. 1935 vodespäi pälidnas radab [[Moskvan metropoliten|metropoliten]].
+Moskv om Venäman znamasine turistine keskuz. [[Moskvan kreml']] da [[Rusked torg]], toižed kul'turan da arhitekturan muštpacahad mülüba [[UNESCO]]:n Man jäl'gusen nimikirjuteshe. Se om mugažo jalos znamasine transportsol'm. Moskvas om 6 aeroportad, 9 päraudtestancijad, 3 jogiportad. Sapsan-üläpiguzjonused kävudas [[Piter]]in, Moskv da [[Alauz'lidn]]an (Alanovgorodan) keskes. 1935 vodespäi pälidnas radab [[Moskvan metropoliten|metropoliten]].
 
 1980 vodel Moskvas mäniba Kezaližed Olimpižed vändod.
 
