*Empty MediaWiki Message*

--- a/Iževsk.mw
+++ b/Iževsk.mw
@@ -5,11 +5,11 @@
 | align="center" | [[Fail:Coat of Arms of Izhevsk (Udmurtia).svg|100px|Iževskan lidnanznam]]
 | align="center" | [[Fail:Flag of Izhevsk (Udmurtia).svg|border|100px|Iževskan flag]]
 |-
-|Eläjiden lugu|| 627 917
+|Eläjiden lugu|| 628 116
 |-
 |Pind|| 315,15 km²
 |}
-'''Iževsk''' ([[Venäkel'|ven]].: ''Ижевск'', [[Udmurtan kel'|udm]].: ''Ижкар'') om lidn [[Venäma|Venämas]]. Se om [[Udmurtijan Tazovaldkund|Udmurtijan Tazovaldkundan]] pälidn. Vodel 2006 eläjiden lugu - 645 000 ristitud.
+'''Iževsk''' ([[Venäkel'|ven]].: ''Ижевск'', [[Udmurtan kel'|udm]].: ''Ижкар'') om lidn [[Venäma|Venämas]]. Se om [[Udmurtijan Tazovaldkund|Udmurtijan Tazovaldkundan]] pälidn. Vodel [[2010]] eläjiden lugu - 628 116 ristitud.
 
 === Iževskan nägud===
 <gallery>
