*Empty MediaWiki Message*

--- a/Iževsk.mw
+++ b/Iževsk.mw
@@ -9,7 +9,7 @@
 |-
 |Pind|| 315,15 km²
 |}
-'''Iževsk''' ([[Venäkel'|ven]].: ''Ижевск'', [[Udmurtan kel'|udm]].: ''Ижкар'') om lidn [[Venäma|Venämas]]. Se om [[Udmurtijan Tazovaldkund|Udmurtijan Tazovaldkundan]] pälidn. Vodel [[2010]] eläjiden lugu - 628 116 ristitud.
+'''Iževsk''' ([[Venäkel'|ven]].: ''Ижевск'', [[Udmurtan kel'|udm]].: ''Ижкар'') om lidn [[Venäma|Venämas]]. Se om [[Udmurtijan Tazovaldkund|Udmurtijan Tazovaldkundan]] pälidn. Vodel [[2010]] eläjiden lugu - 628 116 ristitud.<ref>http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls</ref>
 
 === Iževskan nägud===
 <gallery>
@@ -19,6 +19,8 @@ Fail:Friendship (Izhevsk).jpg
 Fail:Зоопарк иж вход.JPG|Zoopuišt
 </gallery>
 {{stub}}
+
+== Homaičendad == <references />
 
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
