*Empty MediaWiki Message*

--- a/Iževsk.mw
+++ b/Iževsk.mw
@@ -18,10 +18,11 @@ Fail:Удмуртский государственный университет.
 Fail:Friendship (Izhevsk).jpg
 Fail:Зоопарк иж вход.JPG|Zoopuišt
 </gallery>
+
+== Homaičendad ==
+<references />
+
 {{stub}}
-
-== Homaičendad == <references />
-
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Udmurtijan Tazovaldkund]]
