--- a/Komin_Tazovaldkund.mw
+++ b/Komin_Tazovaldkund.mw
@@ -8,7 +8,7 @@ Tazovaldkundal oma röunad [[Nencan avtonomine ümbrik|Nencan avtonomižen ümbr
 
 Tazovaldkundan pälidn om [[Siktivkar]].
 
-Eläjiden lugu om läz 902 000 rist.
+Eläjiden lugu om läz 901 642 rist.<ref>http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls</ref>
 
 Pind om läz 417 000 km².
 
@@ -18,6 +18,9 @@ Tazovaldkundas om 10 lidnad.
 
 == Kacu mugažo ==
 * [[Komin Tazovaldkundan lidnad]]
+
+== Homaičendad ==
+<references />
 
 {{Šablon:Venälaižen Federacijan subjektad}}
 
