at least one blue link

--- a/Araban_kel'.mw
+++ b/Araban_kel'.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Arabic albayancalligraphy.svg|right|250px]]
-'''Araban kel'''' (''اللغة العربية'') om [[semitan keled|semitan]], afrazijan kel'. Pagižijoiden lugu om läz 240 millionad.
+'''Araban kel'''' (''اللغة العربية'') om [[semitan keled|semitan]], afrazijan [[kel']]. Pagižijoiden lugu om läz 240 millionad.
 {{stub}}
 
 [[Kategorii:Keled]]
