*Empty MediaWiki Message*

--- a/Amonap.mw
+++ b/Amonap.mw
@@ -1,5 +1,4 @@
-{{tärtused|Amonap}}
-'''Amonap''' (''matipu'') om [[amonap (rahvaz)|amonap-rahvahan]] kel', üks' [[Suviamerikan indejan keled|suviamerikan indejan kelišpäi]].
+'''Amonap''' (''matipu'') om [[kuikuro]]- da [[kalapalo]]-rahvahan]] kel', üks' [[Suviamerikan indejan keled|suviamerikan indejan kelišpäi]].
 
 Necel kelel pagištas [[Brazilii|Brazilijas]]; pagižijoiden lugu om läz 870 ristitud (mamankel').
 {{stub}}
