*Empty MediaWiki Message*

--- a/Pirgaine.mw
+++ b/Pirgaine.mw
@@ -1,7 +1,7 @@
-[[Fail:Wikipedia bild cupcakes.jpg|thumb|right|250px|Tortutad]]
+[[Fail:Wikipedia bild cupcakes.jpg|thumb|right|250px|Tortuded]]
 '''Tortut''' om pen' [[konditerižed tegesed|konditerine tegez]] maged [[tahtaz|tahtaspäi]].
 {{stub}}
 
-[[Kategorii:Tortutad|*]]
+[[Kategorii:Tortuded|*]]
 
 [[ru:Пирожное]]
