*Empty MediaWiki Message*

--- a/Pirgaine.mw
+++ b/Pirgaine.mw
@@ -1,4 +1,4 @@
-[[Fail:Wikipedia bild cupcakes.jpg|thumb|right|250px|Tortuded]]
+[[Fail:Napoleonschnitte IMG 1721.JPG|thumb|right|250px|[[Napoleon]]-tortut]]
 '''Tortut''' om pen' [[konditerižed tegesed|konditerine tegez]] maged [[tahtaz|tahtaspäi]].
 {{stub}}
 
