или даже такое :-)

--- a/Pirgaine.mw
+++ b/Pirgaine.mw
@@ -1,4 +1,4 @@
-[[Fail:Napoleonschnitte IMG 1721.JPG|thumb|right|250px|[[Napoleon]]-tortut]]
+[[Fail:NZ Lamington.jpg|thumb|right|250px|Tortut]]
 '''Tortut''' om pen' [[konditerižed tegesed|konditerine tegez]] maged [[tahtaz|tahtaspäi]].
 {{stub}}
 
