*Empty MediaWiki Message*

--- a/Pirgaine.mw
+++ b/Pirgaine.mw
@@ -1,5 +1,5 @@
 [[Fail:NZ Lamington.jpg|thumb|right|250px|Tortut]]
-'''Tortut''' om pen' [[konditerižed tegesed|konditerine tegez]] maged [[tahtaz|tahtaspäi]].
+'''Tortut''' om pen' [[konditerižed tegesed|konditerine tegez]] magedas [[tahtaz|tahtaspäi]].
 {{stub}}
 
 [[Kategorii:Tortuded|*]]
