--- a/Piter.mw
+++ b/Piter.mw
@@ -41,7 +41,7 @@ Piterin Istorine keskuz da ühtenzoittud senke muštpachiden kompleksad oma pand
 |rowspan=3|[[Fail:Spb all districts 2005 abc rus.svg|right|thumb|250px|Piterin administrativine jagand]]
 |-
 | <br />
-# [[Admiraltejskii rajon|Admiraltejskii]]
+# [[Admiralteiskii rajon|Admiraltejskii]]
 # [[Vasileostrovskii rajon|Vasileostrovskii]]
 # [[Viborgan rajon (Piter)|Viborgan]]
 # [[Kalininan rajon (Piter)|Kalininan]]
