*Empty MediaWiki Message*

--- a/Kirovan_rajon_(Piter).mw
+++ b/Kirovan_rajon_(Piter).mw
@@ -1,4 +1,4 @@
-[[Fail:Spb kolpinsky.svg|thumb|right|250px|Kirovan rajon Piterin kartal]]
+[[Fail:Spb kirovsky.svg|thumb|right|250px|Kirovan rajon Piterin kartal]]
 '''Kirovan rajon''' ([[Venäkel'|ven.]] ''Кировский район'') om rajon [[Piter]]iš, sijadase lidnan ehtbokas. 
 
 * Pind — 48 km²
