--- a/Piter.mw
+++ b/Piter.mw
@@ -61,7 +61,7 @@ Piterin Istorine keskuz da ühtenzoittud senke muštpachiden kompleksad oma pand
 # [[Frunzen rajon (Piter)|Frunzen]]
 # [[Keskuzrajon (Piter)|Keskuzrajon]]
 |-
-|colspan=2|Rajonoiden röunoiš sijadase 111 südäilidnalašt [[Municipaline ühtnik|municipališt ühtnikad]]: 81 municipališt okrugad (erasil oma ičeze nimed, erasil — vaiše nomerad), 9 lidnad ([[Zelenogorsk (Piter)|Zelenogorsk]], [[Kolpino]], [[Krasnoje Selo]], [[Kronštadt]], [[Lomonosov]], [[Pavlovsk]], [[Petergof]], [[Puškin]], [[Sestroreck]]) i 21 žilod.
+|colspan=2|Rajonoiden röunoiš sijadase 111 südäilidnalašt [[Municipaline ühtnik|municipališt ühtnikad]]: 81 municipališt okrugad (erasil oma ičeze nimed, erasil — vaiše nomerad), 9 lidnad ([[Zelenogorsk (Piter)|Zelenogorsk]], [[Kolpino]], [[Krasnoje Selo]], [[Kronštadt]], [[Lomonosov]], [[Pavlovsk]], [[Petergof]], [[Puškin (lidn)]], [[Sestroreck]]) i 21 žilod.
 |}
 
 == Galerei ==
