*Empty MediaWiki Message*

--- a/Puškin_(lidn).mw
+++ b/Puškin_(lidn).mw
@@ -10,6 +10,8 @@
 |Pind|| 
 |}
 '''Puškin''' ([[Venäkel'|ven]].: ''Пушкин'') om lidn [[Venäma|Venämas]], [[Piter]]iš.
+
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
