*Empty MediaWiki Message*

--- a/Špalad.mw
+++ b/Špalad.mw
@@ -2,7 +2,7 @@
 '''Špalad''' ([[Alaman kel'|alam.]] ''spalk'' — tügi) oma brusanvuiččed tüged [[rel's|rel'soiden]] täht.
 
 == Kacu mugažo ==
-* [[Rel'sad]]
+* [[Rel's]]
 
 {{stub}}
 
