--- a/Rel's.mw
+++ b/Rel's.mw
@@ -1,4 +1,4 @@
-[[Fail:Railroad near Blizhnee Borisovo.jpg|thumb|right|275px|Rel'sad]]
+[[Fail:Sonkovo station 1.jpg|thumb|right|300px|Rel'sad]]
 '''Rel'sad''' ([[Anglijan kel'|angl.]] kelespäi ''rails'' — [[Latinan kel'|lat.]] kelespäi ''regula'' — oiged kalu) oma teraraudbalkad, kudambid pandas [[Špalad|špaloihe]] vai toižihe tüvihe, miše tehta raudte.
 
 == Kacu mugažo ==
