*Empty MediaWiki Message*

--- a/Zelenogorsk_(stancii).mw
+++ b/Zelenogorsk_(stancii).mw
@@ -17,6 +17,7 @@
 '''Zelenogorsk''' ([[venäkel'|ven.]]: ''Зеленогорск'') om [[Oktäbrin raudte]]n stancii [[Piter]]iš.
 {{stub}}
 
-[[Kategorii:Raudtestancijad Venämas]]
+[[Kategorii:Raudtestancijad kirjamišton mödhe]]
+[[Kategorii:Piterin raudtestancijad]]
 
 [[ru:Зеленогорск (станция)]]
