*Empty MediaWiki Message*

--- a/Murino_(Oktäbrin_raudten_platform).mw
+++ b/Murino_(Oktäbrin_raudten_platform).mw
@@ -1,6 +1,8 @@
 [[Fail:Murino railway station - Name.JPG|thumb|right|300px|Murino-platform vl 2008]]
 '''Murino''' ([[Venäkel'|ven.]] ''Мурино'') om [[Oktäbrin raudte]]n [[Raudte Piter — Hiitola|Priozerskan čuradusen]] platform.
 
+{{stub}}
+
 [[Kategorii:Raudtestancijad kirjamišton mödhe]]
 [[Kategorii:Piterin raudtestancijad]]
 
