*Empty MediaWiki Message*

--- a/Karjalan_Tazovaldkund.mw
+++ b/Karjalan_Tazovaldkund.mw
@@ -12,8 +12,8 @@
 |TotArea        = 172400
 |WaterPrcnt     = 14.7
 |PopRnk         = 67
-|Eläjiden lugu  = 690653
-|PopCtDate      = 2008
+|Eläjiden lugu  = 645 205<ref>http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls</ref>
+|PopCtDate      = 2010
 |PopDens        = 4.0
 |GDP            =
 |GDPCtDate      =
@@ -99,6 +99,9 @@ Karjalan Tazovaldkund jagase 16 municipaližihe rajonoihe (sidä kesken 3 rahvah
 == Irdkosketused ==
 * [http://gov.karelia.ru Karjalan Tazovaldkundan oficialine sait] (venäkelel)
 * [http://www.karelia-zs.ru/ Karjalan Tazovaldkundan käskusendai suim] (venäkelel)
+
+== Homaičendad ==
+<references />
 
 {{Hüvä kirjutuz}}
 {{Šablon:Venälaižen Federacijan subjektad}}
