--- a/Toksovo.mw
+++ b/Toksovo.mw
@@ -1,4 +1,4 @@
-[[Fail:Toksovo station - kassa 0.jpg|thumb|310 px|Stancijan pert' Toksovos (2008)]]
+[[Fail:Toksovo station - kassa.jpg|thumb|310 px|[[Toksovo (stancii)|Stancijan pert']] Toksovos (2008)]]
 '''Toksovo''' ([[Venäkel'|ven.]] ''Токсово'', [[Suomen kel'|suom.]] ''Toksova'') om lidnanvuitte žilo [[Leningradan agj]]an [[Vsevoložskan rajon]]as.
 
 Toksovo sijadase 20 km pohjoižhepäi Piterišpäi. Se om [[Toksovon lidnkund]]an administrativine keskuz. Eläjuden lugu — 6135 ristitud (2010).
