--- a/Vorkut.mw
+++ b/Vorkut.mw
@@ -1,3 +1,4 @@
+[[Fail:Vorkutaugol free.jpg|thumb|right|260px|Vorkut öl]]
 '''Vorkut''' ([[Venäkel'|ven]].: ''Воркута'', [[Komin kel'|komi]]: ''Вӧркута'') om lidn [[Venäma]]s, [[Komin Tazovaldkund]]as.
 {{stub}}
 
