*Empty MediaWiki Message*

--- a/Šel'd.mw
+++ b/Šel'd.mw
@@ -1,7 +1,7 @@
 [[Fail:Schelde Liefkenshoek.JPG|thumb|right|Šel'd]]
 '''Šel'd''' om jogi [[Evrop]]as, [[Francii|Francijas]], [[Bel'gii|Bel'gijas]] da [[Alamad|Alamaiš]].
 
-Šel'djogi sündub [[Pikardii|Pikardijaha]], [[Ardennad]]-mägihe, i lankteb [[Pohjoiřmeri|Pohjoižmerhe]].
+Šel'djogi sündub [[Pikardii|Pikardijaha]], [[Ardennad]]-mägihe, i lankteb [[Pohjoižmeri|Pohjoižmerhe]].
 
 Kaikiš surembad ližajoged oma [[Lis (jogi)|Lis]] da [[Rüpel]].
 
