*Empty MediaWiki Message*

--- a/Randaine.mw
+++ b/Randaine.mw
@@ -4,7 +4,7 @@
 
 ''Žanrad'' - pajod vepslaižiden runokirjutajiden runoihe, veronmugaižed vepsän pajod.
 
-''Mülükund'' - 12 ühtnikod.
+''Mülükund'' - 12 ühtnijad.
 
 Vl. [[2006]]-lpäi pajosebr käraudase vepsän muzikkul'turan veronmugaižile žanroile. Ansambl' radab voikuiden, sai-, kätte- da lühüdpajoiden, mugažo sanaližiden žanroiden udessündutamižes. Pajoiden pajatand čereduiše vepslaižiden veronmugaižiden karguiden, vändoiden, haravodoiden edestamižen ühtes.
 
