*Empty MediaWiki Message*

--- a/Randaine.mw
+++ b/Randaine.mw
@@ -14,7 +14,7 @@ Erazvuiččiden voziden ohjandajad: vepsläižiden pajanikoidenke zavodi rata Li
 
 Ristitud, ked konz-se käveliba «Randaižehe»: Vera Mednikova, Valentina Vorobjova, Alevtina Vavilina, Juri Mugačev, [[Nina Zaiceva]], Lidija Olešova, Tamara Ščerbakova.
 
-Pajatab erazvuiččiš Karjalan festivališ <ref>Татьяна Маркова. Путешествие в Северный край // Kodima. – 2011. – 08 (eloku).</ref>, mugažo Venäman rahvahankeskeižiš praznikoiš <ref>Людмила Солдатова. На север, к саамам // Kodima. – 2012. – 04 (sulaku).</ref>
+Pajatab erazvuiččiš Karjalan festivališ <ref>Татьяна Маркова. Путешествие в Северный край // Kodima. – 2011. – 08 (eloku).</ref>, mugažo Venäman rahvahankeskeižiš praznikoiš <ref>Людмила Солдатова. На север, к саамам // Kodima. – 2012. – 04 (sulaku).</ref>.
 
 == Homaitused ==
 {{Reflist}}
