*Empty MediaWiki Message*

--- a/Moskvan_rajon_(Piter).mw
+++ b/Moskvan_rajon_(Piter).mw
@@ -1,5 +1,5 @@
 [[Fail:Spb moskovsky.svg|thumb|right|250px|Moskvan rajon Piterin kartal]]
-'''Moskvan rajon''' ([[Venäkel'|ven.]] ''Московский район'') om rajon [[Piter]]iš, sijadase lidnan longibokas. 
+'''Moskvan rajon''' ([[Venäkel'|ven.]] ''Московский район'') om rajon [[Piter]]iš, sijadase lidnan ehtbokas. 
 
 * Pind — 71,07 km²
 * Eläjiden lugu — 288 744 rist. (2010)
