--- a/Moskvan_rajon_(Piter).mw
+++ b/Moskvan_rajon_(Piter).mw
@@ -5,7 +5,7 @@
 * Eläjiden lugu — 288 744 rist. (2010)
 
 == Irdkosketused ==
-* [http://gov.spb.ru/gov/terr/reg_moscow/ Moskvan rajonan inforamcine portal]
+* [http://gov.spb.ru/gov/terr/reg_moscow/ Moskvan rajonan informacine portal]
 * [http://gov.spb.ru/gov/terr/reg_kirovsk/ Moskvan rajonan administracijan lehtpol' Piterin ohjadusen saital]
 
 {{Piter}}
