*Empty MediaWiki Message*

--- a/Petrogradan_rajon.mw
+++ b/Petrogradan_rajon.mw
@@ -1,5 +1,5 @@
 [[Fail:Spb petrogradsky.svg|thumb|right|250px|Petrogradan rajon Piterin kartal]]
-'''Petrogradan rajon''' ([[Venäkel'|ven.]] ''Петроградский район'') om rajon [[Piter]]iš, sijadase lidnan keskuses [[Nevan]] del'tan saril. 
+'''Petrogradan rajon''' ([[Venäkel'|ven.]] ''Петроградский район'') om rajon [[Piter]]iš, sijadase lidnan keskuses [[Neva]]n del'tan saril. 
 
 * Pind — 24 km²
 * Eläjiden lugu — 130 455 rist. (2010)
