--- a/Manpoled.mw
+++ b/Manpoled.mw
@@ -1,4 +1,4 @@
-Geografijas oma 4 '''pämanpoled''': ''[[pohjoine]]'', ''[[päivlaskm]]'', ''[[päivnouzm]]'' da ''[[suvi]]''. Kaiked oma 8 vai 12 manpoled.
+Geografijas om 4 '''pämanpol't''': ''[[pohjoine]]'', ''[[päivlaskm]]'', ''[[päivnouzm]]'' da ''[[suvi]]''. Kaiked om 8 vai 12 manpol't.
 
 <div style="position: relative; left: 0; top: 0; height: 180px; line-height:15px;"><div style="position: relative; top: 30px;">[[Fail:Nordic compass.png|center|120px]]</div>
 
