*Empty MediaWiki Message*

--- a/Puškinan_rajon_(Piter).mw
+++ b/Puškinan_rajon_(Piter).mw
@@ -1,5 +1,5 @@
 [[Fail:Spb pushkinsky.png|thumb|right|250px|Puškinan rajon Piterin kartal]]
-'''Puškinan rajon''' ([[Venäkel'|ven.]] ''Пушкинский район'') om rajon [[Piter]]iš, sijadase lidnan suven palas. 
+'''Puškinan rajon''' ([[Venäkel'|ven.]] ''Пушкинский район'') om rajon [[Piter]]iš, sijadase lidnan suven palas. Nece om Piterin toine kaikiš suremb rajon territorijan mödhe.
 
 * Pind — 239,95 km²
 * Eläjiden lugu — 135 973 rist. (2010)
