*Empty MediaWiki Message*

--- a/.se.mw
+++ b/.se.mw
@@ -1,4 +1,4 @@
-'''.se''' om [[Röčinma]]n internet-domen. Se om avaitud [[1986]]-ndel vodel.
+'''.se''' om [[Ročinma]]n internet-domen. Se om avaitud [[1986]]-ndel vodel.
 
 == Irdkosketused ==
 * [https://www.iis.se/ Domenan sait]
@@ -7,7 +7,7 @@
 {{CcTLD}}
 {{stub}}
 
-[[Kategorii:Röčinma]]
+[[Kategorii:Ročinma]]
 [[Kategorii:Internet-domenad|s]]
 
 [[ru:.se]]
