*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -18,15 +18,7 @@
 Eläjiden lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografižed andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
+Pälidn om [[Stokhol'm]].
 
 {{Evrop}}
 {{stub}}
