*Empty MediaWiki Message*

--- a/Oht_(Nevan_ližajogi).mw
+++ b/Oht_(Nevan_ližajogi).mw
@@ -1,4 +1,4 @@
-[[Fail:Малоохтинский мост.jpg|thumb|right|325px|Ohtan su i [[Pen'ohtan sild]]]]
+[[Fail:Малоохтинский мост.jpg|thumb|right|325px|Ohtan su i [[Pen' Ohtan sild]]]]
 '''Oht''' ([[Venäkel'|ven.]] ''Охта'') om jogi [[Piter]]in homendezbokas i [[Leningradan agj]]an [[Vsevoložskan rajon]]as, [[Neva]]njogen kaiked suremb oiged ližajogi.
 
 Piduz — 99 km, leveduz — 10—50 m, süvüz — 0,5-5,5 m, basseinan pind — 768 km².
