--- a/Lobotomii.mw
+++ b/Lobotomii.mw
@@ -1,5 +1,5 @@
 [[Fail:Icepicks1.jpg|thumb|right|250px|Orbitoklast — instrument labotomijan tegendan täht]]
-'''Lobotomii''' ([[Amugrekan kel'|amugr.]] ''λοβός — pala'' i ''τομή — čapatez''), mugažo tetab kuti '''leikotomii''' ([[Amugrekan kel'|amugr.]] ''λευκός — vauged'' i ''τομή — čapatez'') om neirohirurgine operacii, kudamban aigan leikatas kudehed aivoiden ocpaloiden i neniden toižen palan keskes.
+'''Lobotomii''' ([[Amugrekan kel'|amugr.]] ''λοβός — pala'' i ''τομή — čapatez''), mugažo tetab kuti '''leikotomii''' ([[Amugrekan kel'|amugr.]] ''λευκός — vauged'' i ''τομή — čapatez'') om neirohirurgine operacii, kudamban aigan leikatas kudehed aivoiden ocpaloiden i niiden toižen palan keskes.
 
 {{stub}}
 
