*Empty MediaWiki Message*

--- a/Hebo.mw
+++ b/Hebo.mw
@@ -1,8 +1,8 @@
 {{1000}}
 [[Fail:Pernod Al Ariba 0046b.jpg|pisi|250px|Kodihebo]]
-'''Hebo''' (lat.: ''Equus caballus'') om [[Živatad|kabjživat]]. 
+'''Hebo''' ([[Latinan kel'|lat.]]: ''Equus caballus'') om [[Živatad|kabjživat]]. 
 
-Hebo om kodikoittud ristituil lujas amu jo. Sil om lujas znamoičend ristitun civilizacijan istorijas.
+Hebo om kodikoittud ristituil lujas amu jo. Sil om sur' znamoičend ristituiden civilizacijan istorijas.
 
 {{stub}}
 
