Статья была ещё реликт)

--- a/Mal't.mw
+++ b/Mal't.mw
@@ -13,22 +13,12 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Malta.svg|300px]]
 |}
-'''Mal't''' (mal't., angl.: ''Malta''; mal.:''Repubblika ta' Malta'') — pen' sar' valdkund Evropas, Keskmeren randal. [[EÜ]]n ühtnii. 
+'''Mal't''' ([[Mal'tan kel'|mal't.]]: ''Repubblika ta' Malta'', [[Anglijan kel'|angl.]]: ''Malta'') — pen' sar'hine valdkund [[Evrop]]as, [[Keskmeri|Keskmeren]] randal. [[EÜ]]n ühtnii. 
 
 Pälidn — [[Valetta|Valett]].</br>
 Eläjiden lugu — 402 000.</br>
 Pind — 316 km².</br>
 Ohjandusen form — [[Parlamentine tazovaldkund]].
-
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
 
 {{Evropa}}
 
