*Empty MediaWiki Message*

--- a/Vodin_kel'.mw
+++ b/Vodin_kel'.mw
@@ -1,11 +1,11 @@
 [[Fail:Votic language map.png|pisi|300px|Vodin kel']]
-'''Vodin kel'''' om [[Vodilaižed|vodin rahvahan]] kel', kudamb mülüb [[Baltijan meren suomalaižed keled|Baltijan meren suomalaižihe kelihe]]. Lähembaine kel' oma [[Estin kel'|estin]] da [[Livin kel'|livin]] keled.
+'''Vodin kel'''' om [[Vodilaižed|vodin rahvahan]] kel', kudamb mülüb [[Baltijan meren suomalaižed keled|Baltijan meren suomalaižihe kelihe]]. Lähembaižed keled oma [[Estin kel'|estin]] da [[Livin kel'|livin]] keled.
 
-Pagižijoiden om tämbei lujas vähä, i sikš kel' om kadotanu ičeze kommunikativižen funkcijan.
+Pagižijoid om tämbei lujas vähä, i sikš kel' om kadotanu ičeze kommunikativižen funkcijan.
 
 Vodin keles om nell' paginad, no nügüd' elegiš om vaiše üks' niišpäi (päivlasmaine).
 
-Jäl'gmäižil vozil vodin kelel pästtihe kaks' kirjad. Ližaks, necil kelel paindas "[[Maaväci]]"- lehtez.
+Jäl'gmäižil vozil vodin kelel pästtihe kaks' kirjad. Ližaks, necil kelel paindas "[[Maaväci]]"-lehtest.
 
 == Literatur ==
 * Агранат Т. Западный диалект водского языка.&nbsp;— М.; Гронинген, 2007.&nbsp;— (В печати).
