*Empty MediaWiki Message*

--- a/Vodin_kel'.mw
+++ b/Vodin_kel'.mw
@@ -20,6 +20,7 @@ Jäl'gmäižil vozil vodin kelel pästtihe kaks' kirjad. Ližaks, necil kelel pa
 * Vadja keele sõnaraamat. (Словарь водского языка)&nbsp;/ Ред. Э. Адлер, М. Леппик. Т. 1-7. Tallinn., 1990 — 2011.
 
 [[Kategorii:Keled]]
+[[Kategorii:Vodilaižed]]
 
 [[af:Woties]]
 [[ar:لغة فوتية]]
