*Empty MediaWiki Message*

--- a/Vodilaižed.mw
+++ b/Vodilaižed.mw
@@ -1,8 +1,9 @@
-[[Fail:VoticCoatOfArms.jpg|pisi|hura|Znam]]
-[[Fail:Kreevinit.JPG|pisi|Vodilaižed]]
+[[Fail:VoticCoatOfArms.jpg|pisi|150px|hura|Znam]]
+[[Fail:Kreevinit.JPG|pisi|200px|Vodilaižed]]
 '''Vodilaižed''' ([[Vodin kel'|vod.]]: ''Vad'd'alaizõd'') oma üks' [[Baltijan meren suomalaižed rahvahad|Baltijan meren suomalaižiš rahvahaišpäi]].
 
 [[Kategorii:Rahvahad]]
+[[Kategorii:Vodilaižed|*]]
 
 [[an:Votos (pueblo finés)]]
 [[be:Водзь]]
