*Empty MediaWiki Message*

--- a/Gerzmava_Hibla.mw
+++ b/Gerzmava_Hibla.mw
@@ -1,6 +1,9 @@
 [[Fail:Hibla 2008 Abkhazia cropped.jpg|thumb|right|225px|Hibla Gerzmava]]
 '''Hibla Levarsovna Gerzmava''' ([[Venäkel'|ven.]] ''Хибла Леварсовна Герзмава'', [[Abhazijan kel'|abh.]] ''Хьыбла Леуарса-иҧҳа Гьырзмаа''; sünd. [[6. uhoku]] [[1970]], [[Picund]], [[Abhazii]]) om [[Venäma|venälaine]] da [[Abhazii|abhazijalaine]] operpajatai ([[soprano]]).
 
+== Irdkosketused ==
+* [http://www.hibla.ru/ Hiblan Gerzmavan oficialine sait]
+
 {{stub}}
 
 [[Kategorii:Operpajatajad kirjamišton mödhe]]
