*Empty MediaWiki Message*

--- a/Kändajan_värad_sebranikad.mw
+++ b/Kändajan_värad_sebranikad.mw
@@ -1,15 +1,15 @@
-'''Kändajan värad sebranikad''' ([[Venäkel'|ven.]] ''Ложные друзья переводчика'' [[Francijan kel'|fr. kelespäi]] ''faux amis'') om par sanoid kahtes keles, kudambad koskudas toine toižehe kirjutamižel i/vai virkandal, no erinedas znamoičendal.
+'''Kändajan värad sebranikad''' ([[Venäkel'|ven.]] ''Ложные друзья переводчика'' [[Francijan kel'|fr. kelespäi]] ''faux amis'') om par [[sana|sanoid]] kahtes keles, kudambad koskudas toine toižehe kirjutamižel i/vai virkandal, no erinedas znamoičendal.
 
 == Ozutesed ==
 
-=== Venäkelenke ===
+=== [[Venäkel'|Venäkelenke]] ===
 * '''nogi''' — ''сажа'', a ei ''ноги'' (jaugad)
 * '''pudr''' — ''каша'', a ei ''пудра'' (hot' kirjutase mugažo)
 * '''rad''' — ''работа'', a ei ''рад(остный)'' (hüviš meliš)
 * '''sol'''' — ''кишка'', a ei ''соль'' (sol)
 * '''žir''' — ''этаж'', a ei ''жир'' (razv)
 
-=== Germanijan kelenke ===
+=== [[Germanijan kel'|Germanijan kelenke]] ===
 * '''sand''' — ''Erhalten'', a ei ''Sand'' (lete)
 * '''verk''' — ''Netz'', a ei ''Werk'' (tö)
 
