--- a/Luxor.mw
+++ b/Luxor.mw
@@ -3,15 +3,15 @@
 Serijan säi om [[MumboJumbo]].
 
 == Vändod ==
-* [[Luxor 1]]
-* [[Luxor: Amun Rising]]
-* [[Luxor 2]]
-* [[Luxor 3]]
-* [[Luxor: Quest for the Afterlife]]
-* [[Luxor: 5th Passage]]
-* [[Luxor Mahjong]]
-* [[Luxor Adventures]]
-* [[Luxor Evolved]]
+* ''[[Luxor 1]]''
+* ''[[Luxor: Amun Rising]]''
+* ''[[Luxor 2]]''
+* ''[[Luxor 3]]''
+* ''[[Luxor: Quest for the Afterlife]]''
+* ''[[Luxor: 5th Passage]]''
+* ''[[Luxor Mahjong]]''
+* ''[[Luxor Adventures]]''
+* ''[[Luxor Evolved]]''
 
 [[Kategorii:Luxor|*]]
 
