--- a/Luxor.mw
+++ b/Luxor.mw
@@ -1,4 +1,4 @@
-'''«Luxor»''' om [[kompjuterine vänd|kompjuterižiden vändoiden]] [[arkad]]-žanras serii.
+'''«Luxor»''' om [[kompjuterine vänd|kompjuterižiden vändoiden]] serii [[arkad]]-žanras.
 
 Serijan säi om [[MumboJumbo]].
 
