--- a/Amerik.mw
+++ b/Amerik.mw
@@ -34,6 +34,7 @@ Pind — 42,1 millionad km², Eläjiden lugu — 885,8 mln.
 [[bo:ཨ་མེ་རི་ཁ་གླིང་ཆེན།]]
 [[br:Amerika]]
 [[bs:Amerika]]
+[[bxr:Америка]]
 [[ca:Amèrica]]
 [[chy:Amérika]]
 [[ckb:ئەمەریکاکان]]
