--- a/Amerikan_Ühtenzoittud_Valdkundad.mw
+++ b/Amerikan_Ühtenzoittud_Valdkundad.mw
@@ -65,7 +65,7 @@ Fail:GoldenGateBridge BakerBeach MC.jpg|<center>[[«Kuldaine verai»-sild]] San 
 [[bpy:তিলপারাষ্ট্র]]
 [[br:Stadoù-Unanet Amerika]]
 [[bs:Sjedinjene Američke Države]]
-[[bxr:Америка]]
+[[bxr:Амеэрикын Нэгэдэһэн Улас]]
 [[ca:Estats Units d'Amèrica]]
 [[cbk-zam:Estados Unidos de America]]
 [[cdo:Mī-guók]]
