--- a/Gerzmava_Hibla.mw
+++ b/Gerzmava_Hibla.mw
@@ -6,7 +6,7 @@
 
 {{stub}}
 
-[[Kategorii:Operpajatajad kirjamišton mödhe]]
+[[Kategorii:Pajatajad kirjamišton mödhe]]
 
 [[ab:Хьыбла Герзмаа]]
 [[ru:Герзмава, Хибла Леварсовна]]
