*Empty MediaWiki Message*

--- a/Igark.mw
+++ b/Igark.mw
@@ -5,9 +5,12 @@
 | align="center" | [[Fail:Coat of Arms of Igarka (Krasnoyarsk krai).png|100px|Igarkan lidnanznam]]
 | align="center" | [[Fail:Flag of Igarka (Krasnoyarsk krai).png|125px|Igarkan flag]]
 |-
-|Eläjiden lugu|| 6 554
+|Eläjiden lugu|| 6 183<ref>http://www.gks.ru/free_doc/new_site/population/demo/perepis2010/svod.xls</ref>
 |}
 '''Igark''' ([[Venäkel'|ven]]. ''Игарка'') om lidn [[Venäma]]s, [[Krasnojarskan rand]]as.
+
+== Homaičendad ==
+<references />
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
