*Empty MediaWiki Message*

--- a/Kändajan_värad_sebranikad.mw
+++ b/Kändajan_värad_sebranikad.mw
@@ -10,6 +10,7 @@
 * '''žir''' — ''этаж'', a ei ''жир'' (razv)
 
 === [[Germanijan kel'|Germanijan kelenke]] ===
+* '''maht''' — ''Erfahrung'', a ei ''Macht'' (vägi)
 * '''sand''' — ''Erhalten'', a ei ''Sand'' (lete)
 * '''verk''' — ''Netz'', a ei ''Werk'' (tö)
 
