*Empty MediaWiki Message*

--- a/Kartohk-pirgaine.mw
+++ b/Kartohk-pirgaine.mw
@@ -1,5 +1,5 @@
 [[Fail:Trøffelkugler.jpg|thumb|right|250px|“Kartohkad“]]
-'''Kartohk-[[tortut]]''' om [[biskvit]]iž-[[šokolad]]tortut kehker formas. Om harakterine [[kakao]]n magu.
+'''Kartohk-[[tortut]]''' om [[biskvit]]iž-[[šokolad]]tortut kehkeral formal. Om harakterine [[kakao]]n magu.
 {{stub}}
 
 [[Kategorii:Tortuded]]
