--- a/Kuban'_(jogi).mw
+++ b/Kuban'_(jogi).mw
@@ -7,4 +7,40 @@ Jogen piduz om 870 km, basseinan pind om 57,900 km².
 
 [[Kategorii:Joged]]
 
+[[ar:الكوبان]]
+[[be:Рака Кубань]]
+[[bg:Кубан (река)]]
+[[ca:Riu Kuban]]
+[[cs:Kubáň (řeka)]]
+[[cv:Кубань (юханшыв)]]
+[[da:Kuban]]
+[[de:Kuban]]
+[[en:Kuban River]]
+[[eo:Kuban]]
+[[es:Río Kubán]]
+[[et:Kuban]]
+[[fa:کوبان]]
+[[fi:Kuban (joki)]]
+[[fr:Kouban (fleuve)]]
+[[hu:Kubány]]
+[[it:Kuban']]
+[[ja:クバン川]]
+[[kbd:Псыжъ]]
+[[ko:쿠반 강]]
+[[krc:Къобан (суу)]]
+[[la:Hypanis]]
+[[lt:Kubanė]]
+[[nl:Koeban (rivier)]]
+[[nn:Kuban]]
+[[no:Kuban]]
+[[os:Хъобан (цæугæдон)]]
+[[pl:Kubań]]
+[[pt:Rio Kuban]]
+[[ro:Kuban]]
 [[ru:Кубань (река)]]
+[[sk:Kubáň (rieka)]]
+[[sv:Kuban]]
+[[tr:Kuban Nehri]]
+[[uk:Кубань (річка)]]
+[[vi:Sông Kuban]]
+[[zh:庫班河]]
