--- a/Ristte.mw
+++ b/Ristte.mw
@@ -5,4 +5,12 @@
 
 [[Kategorii:Ted]]
 
+[[da:Kryds (trafik)]]
+[[de:Straßenkreuzung]]
+[[en:Intersection (road)]]
+[[fr:Carrefour]]
+[[it:Intersezione a raso]]
+[[ja:交差点]]
+[[lt:Sankryža]]
+[[pl:Skrzyżowanie]]
 [[ru:Перекрёсток]]
