--- a/Keskuzrajon_(Piter).mw
+++ b/Keskuzrajon_(Piter).mw
@@ -12,4 +12,9 @@
 
 [[Kategorii:Piter]]
 
+[[en:Tsentralny District, Saint Petersburg]]
+[[fi:Pietarin keskustan piiri]]
+[[fr:District central de Saint-Pétersbourg]]
+[[it:Centralnyj rajon]]
 [[ru:Центральный район (Санкт-Петербург)]]
+[[zh:中区 (圣彼得堡)]]
