--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -1,4 +1,4 @@
-'''Vepsän rahvahaline hor''' (vai ''Vepsän rahvahan hor'', [[Venäkel'|ven.]]: ''«Вепсский народный хор»'') om üks' [[Karjal|Karjalan]] vanhembiš kollektivoišpäi, kudamb om sündnu vodel 1936 [[Šoutjärv'|Šoutjärvhe]], i vodel 2011 kül'mkun lopus Vepsän rahvahaližele horale täudui 75 vot <ref>Irina Sotnikova. Siš eläb rahvahan heng // Kodima. – 2011. – 12 (tal'vku).</ref>.
+'''Vepsän rahvahan hor''' ([[Venäkel'|ven.]]: ''«Вепсский народный хор»'') om üks' [[Karjal|Karjalan]] vanhembiš kollektivoišpäi, kudamb om sündnu vodel 1936 [[Šoutjärv'|Šoutjärvhe]], i vodel 2011 kül'mkun lopus Vepsän rahvahan horale täudui 75 vot <ref>Irina Sotnikova. Siš eläb rahvahan heng // Kodima. – 2011. – 12 (tal'vku).</ref>.
 
 Se pajati dai pajatab erazvuiččiš [[Venäma|Venäman]] festivališ dai Moskvas-ki <ref>Al'ona Jegorova. Vepsän rahvahan hor Moskvas // Kodima. – 2009. – 07 (heinku).</ref>. Vepsän hor om tutab verhiš maiš-ki: Suomes, Norvegijas, Ročin da Estin mal i toižiš maiš.
 
