Раз это остров, то наверно так правильнее

--- a/Kačokavallo.mw
+++ b/Kačokavallo.mw
@@ -1,5 +1,5 @@
 [[Fail:Caciocavallo Silano.jpg|thumb|right|275px|Kačokavallo]]
-'''Kačokavallo''' ([[Italijan kel'|ital.]] ''Caciocavallo'', [[Sicilijan kel'|sic.]] ''Caciucavaddu'') om [[sagud]]en erik lambaz- vai lehm[[maid]]ospäi, kudambad eziauguižin tehtihe vaiše [[Sicilii|Sicilijas]], no sid' sen tegend leviganzi kaiked [[Italii|Italijadme]] i [[Balkanad|Balkanoile]].
+'''Kačokavallo''' ([[Italijan kel'|ital.]] ''Caciocavallo'', [[Sicilijan kel'|sic.]] ''Caciucavaddu'') om [[sagud]]en erik lambaz- vai lehm[[maid]]ospäi, kudambad eziauguižin tehtihe vaiše [[Sicilii|Sicilijal]], no sid' sen tegend leviganzi kaiked [[Italii|Italijadme]] i [[Balkanad|Balkanoile]].
 
 {{stub}}
 
