*Empty MediaWiki Message*

--- a/Maid.mw
+++ b/Maid.mw
@@ -1,4 +1,4 @@
-[[Fail:Glass of milk on tablecloth.jpg|thumb|right|250px|Maidon stokan]]
+[[Fail:Glass of milk on tablecloth.jpg|thumb|right|250px|Stokan maidod]]
 '''Maid''' om sötainozoluz; amundase [[imetaiživatad|imetaiživatoiden]] emän [[maidraug]]uišpäi. Maidon londuseline märičine — poigiden [[imetuz]].
 
 Maid mäneb äjiden produktoiden mülükundaha. Sen tegend om järed [[tegimišt]]on sarak.
