--- a/Kaiv.mw
+++ b/Kaiv.mw
@@ -1,6 +1,8 @@
 [[Fail:Russian well.JPG|thumb|right|300px|Tipine venälaine kaid]]
 '''Kaid''' om [[gidrotehnine sauvuz]] [[gruntvezi|gruntveziden]] samižen täht. Tobjimalaz nece om püštoiged süvenduz varmitadud seinidenke i mehanizm veden libundan täht (vädr noras vai [[pomp]]). 
 
+{{stub}}
+
 [[Kategorii:Gidrotehnižed sauvused]]
 
 [[ru:Колодец]]
