--- a/Elist.mw
+++ b/Elist.mw
@@ -3,7 +3,7 @@
 |colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Elist'''</big>
 |-
 | align="center" | [[Fail:Coat_of_Arms_of_Elista_(Kalmykia)_(2004).png|100px|Elistan lidnanznam]]
-| align="center" | [[Fail:Flag_of_Elista_(Kalmykia).png|100px|Elistan lidnanznam]]
+| align="center" | [[Fail:Flag_of_Elista_(Kalmykia).png|100px|Elistan flag]]
 |-
 |Eläjiden lugu|| 103 053
 |-
