*Empty MediaWiki Message*

--- a/Pekka_Kana_2.mw
+++ b/Pekka_Kana_2.mw
@@ -1,7 +1,7 @@
 '''«Pekka Kana 2»''' om [[2003]]-žen voden [[Suomenma|suomalaine]] kompjuterine vänd [[arkad]]-žanras. Sen säi om «[[Piste Gamez]]».
 {{stub}}
 
-[[Kategorii:Kompjuterižed vändod]]
+[[Kategorii:Kompjuterižed vändod kirjamišton mödhe]]
 
 [[fi:Pekka Kana 2]]
 [[pl:Pekka Kana 2]]
