*Empty MediaWiki Message*

--- a/Ühten_kirjan_kirjutai.mw
+++ b/Ühten_kirjan_kirjutai.mw
@@ -6,7 +6,11 @@
 * '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Tullejan jäl'geta]]
 * '''[[Štil'mark Robert|Robert Štil'mark]]''' — [[Jälgestai Kal'kuttaspäi]]
 * '''[[Li Harper|Harper Li]]''' — [[Rikta matkajan]]
-da toižed
+da toižed.
+
+== Kacu mugažo ==
+* [[Magnum opus]]
+* [[Ühten hitan artist]]
 {{stub}}
 
 [[Kategorii:Literatur]]
