--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -26,8 +26,8 @@ Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
 
 Suomenman Prezidentoiden nimikirjutez:
-* [[Štol'berg Kaarlo Juho]] (1919-1925)
-* [[Relander Lauri Kristian]] (1925-1931)
+* [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
+* [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
 * [[Svinhufvud Per Evind]] (1931-1937)
 * [[Kyösti Kallio]] (1937-1940)
 * [[Risto Ryti]] (1940-1944)
@@ -36,8 +36,8 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Urho Kekkonen]] (1956-1982)
 * [[Mauno Koivisto]] (1982-1994)
 * [[Martti Ahtisaari]] (1994-2000)
-* [[Halonen Tarja]] (2000-2012)
-* [[Sauli Niinistö]] (2012-)
+* [[Halonen Tarja|Tarja Halonen]] (2000-2012)
+* [[Sauli Niinistö|Niinistö Sauli]] (2012-)
 
 == Geografijan andmused ==
 
