--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -42,7 +42,7 @@ Suomenman Prezidentoiden nimikirjutez:
 == Geografijan andmused ==
 
 == Eläjad ==
-Suomenman oficialižed keled oma [[suomen kel']] ka [[ročin kel']].
+Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
 
 == Ižanduz ==
 
