--- a/Ühten_kirjan_kirjutai.mw
+++ b/Ühten_kirjan_kirjutai.mw
@@ -1,11 +1,11 @@
-'''„Ühten kirjan kirjutai“''' om [[termin]], sättutoitud [[kirjutai|kirjutoile]], kaikiš tetabad vaiše ühtel kirjal. Hot' hö voiba kirjutada enamb [[säduz|sädusid]], heiden sämižen toine pala jäda vaiše vähäižel tetab lugijoile.
+'''„Ühten kirjan kirjutai“''' om [[termin]], sättutoitud [[kirjutai|kirjutajile]], kudambad oma levedali tetabad vaiše ühtel kirjal. Hot' hö voiba kirjutada enamba [[säduz|sädusid]], heiden sädamižen toine pala jäb vähäižel tetabaks lugijoile.
 
 == Ozutesed ==
-* '''[[Gribojedov Aleksandr|Aleksakdr Gribojedov]]''' — [[Gorä melen tagapäi]]
-* '''[[Eršov Pötr|Pötr Eršov]]''' — [[Hebout-gurbačut]]
-* '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Tullejan jäl'geta]]
+* '''[[Gribojedov Aleksandr|Aleksakdr Gribojedov]]''' — [[Gor'a melespäi]]
+* '''[[Eršov Pötr|Pötr Eršov]]''' — [[Hebohut-gurbačut]]
+* '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Tullejan jäl'ghe]]
 * '''[[Štil'mark Robert|Robert Štil'mark]]''' — [[Jälgestai Kal'kuttaspäi]]
-* '''[[Li Harper|Harper Li]]''' — [[Rikta matkajan]]
+* '''[[Li Harper|Harper Li]]''' — [[Rikta matkadajan]]
 da toižed.
 
 == Kacu mugažo ==
