--- a/Gutenberg_Iogann.mw
+++ b/Gutenberg_Iogann.mw
@@ -1,10 +1,11 @@
 {{1000}}
-[[Fail:Gutenberg-Denkmal in Strassburg-2.jpg|pisi|250px|Muštpacaz Gutenbergale Strassburgas]]
-'''Johannes Gutenberg''' (todesine nimi: ''Johannes Gensfläiš''; keskes 1397 da 1400 v., [[Mainc]] — 03.02.1468, Mainc) — germanijalaine juvelir da melestegii. 1440 vl. hän sädi mahtusen painda likkujiden metalližiden literiden abul.
+[[Fail:Gutenberg-Denkmal in Strassburg-2.jpg|pisi|230px|Muštpacaz Gutenbergale [[Strassburg]]as]]
+'''Iogann Gutenberg''' ([[Germanijan kel'|germ.]] ''Johannes Gutenberg''; keskes 1397 da 1400, [[Mainc]] — 03.02.1468, Mainc) — [[Germanii|germanijalaine]] juvelir da melestegii. 1440 vl. hän sädi [[Kirjoiden painmine|mahtusen painda]] likkujiden metalližiden literiden abul.
 
 {{stub}}
 
 [[Kategorii:Tehnologii|G]]
+[[Kategorii:Melestegijad]]
 
 [[als:Johann Gutenberg]]
 [[an:Johannes Gutenberg]]
