Может быть, в случ. с российскими нас. пунктами это можно не указывать?

--- a/Fevral'sk.mw
+++ b/Fevral'sk.mw
@@ -1,5 +1,5 @@
 [[Fail:Fevralsk.jpg|thumb|right|300px|Fevral'sk-stancijan vokzal]]
-'''Fevral'sk''' ([[Venäkel'|ven.]] ''Февральск'') om [[radinžilo]] ([[lidnanvuitte žilo]]) [[Amuran agj]]an [[СSelemdžinskan rajon]]as.
+'''Fevral'sk''' ([[Venäkel'|ven.]] ''Февральск'') om [[radinžilo]] ([[lidnanvuitte žilo]]) [[Venäma]]s, [[Amuran agj]]an [[Selemdžinskan rajon]]as.
 
 Eläjiden lugu — 4 844 ristitud (2010).
 
